# barsuift-simlife



--------------------------------------------------
---                    v0.6                    ---
--------------------------------------------------

New features
------------
Improve the navigation controls
  * navigation style is first-person style
  * create a walking mode and a fly mode


Bug fixes
---------
None yet



--------------------------------------------------
---                    v0.5                    ---
--------------------------------------------------

This is yet another an intermediary release, focused on time management.
The rest of the application has not changed a lot.


New features
------------
Replace the calendar system with a simpler date system
Important internal rework to get rid of Observable/Observer and use homemade Publisher/Subscriber instead
Important internal rework to add a synchronization framework to manage concurrent continuous actions
Use of this synchronization framework for falling leaves, so they follow application speed. they can also be stopped.
File menu actions now stop the application before executing its actions
Addition of a "Very fast" speed radio button (and rename others to "Normal" and "Fast")
When changing speed, stop the application if running, set the new value, and restart if it was running


Bug fixes
---------
None yet



--------------------------------------------------
---                    v0.4                    ---
--------------------------------------------------

This is an intermediary release. The interesting part of the application has not changed a lot.


New features
------------
Addition of this change-log
Important rework of inner code for better design and performance
Ability to show/hide FPS (new menu item), stored in save file
Ability to show/hide the axis (new menu item), stored in save file
The camera position and angle of view is stored in save file
Ability to reset the camera to its original point of view (new menu item)